Fixed github image alignment

--- a/style.css
+++ b/style.css
@@ -99,24 +99,30 @@ header:not(:hover) #scroll-text{
 }
 
 footer{
+    position: relative;
     background-color: hsl(0, 0%, 20%);
     color: hsl(0, 0%, 90%);
+    height: 30vh;
     padding-bottom: 5vh;
 }
 footer #title{
+    position: absolute;
     padding-top: 7vh;
 }
 footer #github{
     position: absolute;
     right: 10vw;
+    top: 50%;                               /* Top edge at 50% of the height */
+    transform: translateY(-50%);            /* Image up 50% it's own height */
     width: 6vw;
     height: auto;
 }
 footer #email-link{
-    display: inline-flex;
+    position: absolute;
+    display: flex;
     text-decoration: none;
     color: hsl(0, 0%, 90%);
-    margin-top: 7vh;
+    bottom: 5vh;
     margin-left: 10vw;
 }
 footer #email{
